added information to readme

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
       <script src="Assets/script.js"></script>
     </body>
+
+    <footer> 
+        <div>
+            <h2>📅 Keeping you organized!</h2>
+        </div>
+    </footer>
   </html>
 
    
